--- a/KGNA/KGNA.iOS/KGNA.iOS.csproj
+++ b/KGNA/KGNA.iOS/KGNA.iOS.csproj
@@ -122,7 +122,7 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
+    <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
@@ -136,5 +136,6 @@
     <BundleResource Include="Resources\KGNA_LOGO.png" />
     <BundleResource Include="Resources\bg.png" />
     <BundleResource Include="Resources\KGNA.png" />
+    <BundleResource Include="Resources\Map.png" />
   </ItemGroup>
 </Project>
